# pairs-trading

./: pyproject.toml
schemas/: pair_analysis.py
utils/: find_pair.py
