[tool.poetry]
name = "pairs-trading-round-2"
version = "0.1.0"
description = ""
authors = ["Hakim Guessous <hguessous@heylohousing.com>"]

[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.1.63"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
